# DUI

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CMakeLists.txt  MANIFEST.in  README.md  README.txt  conftest.py  dui  dui.py  dui_img  new_img_viewer_bkp.py  pyproject.toml  setup.cfg  setup.py
PyQt_DUI/: main_gui.py  shell_n_box.py
cli_tmp_app/: dui_idials_GUI.sh  idials_GUI.sh  img_view  img_view.sh  run_DUI.bat  run_DUI.sh  set_local_path.sh  set_local_path_windows.bat
dui/: __init__.py  cli_interactions.py  inner_mult_opt.py  main_dui.py  phil_edit_code_generator.py  phil_param_widget_builder.py  python_qt_bind.py  simpler_param_stacked_widgets.py  stacked_widgets.py  xia2-report.html
dui_app/: config_DUI.sh  dui  img_view  write_setpath.py
dui_idials_app/: config_DUI.sh  config_setpath.sh  dui  img_view  setup_setpath.sh  test_wait_dummy.sh  write_setpath.py
example/: pyrvapi_demo  pyrvapi_demo.py
first_pyside_prototipe/: shell_n_box.py
idials_GUI/: custom_widgets.py  dynamic_reindex_gui.py  find_spots_mult_opt.py  idials_gui.py  idials_main_widget.py  idials_stacked_widgets.py  import_mult_opt.py  index_mult_opt.py  integrate_mult_opt.py  main_widget.py  outputs_gui.py  params_live_gui_generator.py  python_qt_bind.py  queues_n_threads.py  refine_mult_opt.py  setup.py  setup_tst.py  simpler_param_widgets.py
img_utils/: data_2_img.py  from_flex_array_to_PyQt_img.py  image_viewer_w_pyside.py
lui_testing/: bash_remote_test.sh  bravais_summary.json  david_hack_demo.py  flex_arr_tst_02.py  idials_gui_stabl.py  json_dict_toy_ed_02.py  (+6 more)
(+435 files in other folders)
